--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "gh-pages": "^6.2.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
